<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.demo.bywindow.ui.detail.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.demo.bywindow.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hour"
        android:name="com.demo.bywindow.ui.hour.HourFragment"
        android:label="@string/title_hour"
        tools:layout="@layout/fragment_hour" />

    <fragment
        android:id="@+id/navigation_week"
        android:name="com.demo.bywindow.ui.week.WeekFragment"
        android:label="@string/title_week"
        tools:layout="@layout/fragment_week" />

</navigation>