<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".ui.detail.DetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingBottom="7dp"
        android:background="@drawable/block_alpha">

        <TextView
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/air_quality"
            android:textSize="22sp"
            android:textColor="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center"
                android:max="100"
                android:min="0"
                android:progress="29"
                style="@style/Custom.Progressbar.Ring" />

            <TextView
                android:id="@+id/airQualityFigure"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="29"
                android:textSize="75sp" />

            <TextView
                android:id="@+id/airQualitySign"
                android:layout_gravity="center_horizontal|top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:paddingBottom="3dp"
                android:text="优"
                android:textSize="30sp"
                android:textColor="@color/white"
                android:background="@color/green_standard" />

        </FrameLayout>

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingBottom="7dp"
        android:background="@drawable/block_alpha">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/wind_strong"
                    android:textSize="22sp"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/windSpeedPgb"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="5dp"
                    android:max="17"
                    android:min="0"
                    android:progress="1"
                    style="@style/Custom.Progressbar.Vertical" />

                <TextView
                    android:id="@+id/windSpeedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1级"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/wind_speed"
                    android:textSize="22sp"
                    android:textColor="@color/white" />

                <ProgressBar
                    android:id="@+id/windStrongPgb"
                    android:layout_width="10dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="5dp"
                    android:max="1000"
                    android:min="500"
                    android:progress="750"
                    style="@style/Custom.Progressbar.Vertical" />

                    <TextView
                        android:id="@+id/windStrongText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100km/h"
                        android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/windPostionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="0dp"
            android:text="北风"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:paddingTop="3dp"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:paddingBottom="7dp"
        android:background="@drawable/block_alpha">

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/wet"
                android:textSize="22sp"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/humidityPgb"
                android:layout_width="66dp"
                android:layout_height="66dp"
                android:max="100"
                android:min="0"
                android:progress="88"
                style="@style/Custom.Progressbar.Ring" />

            <TextView
                android:id="@+id/humidityText"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="88%"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/pressure"
                android:textSize="22sp"
                android:textColor="@color/white" />

            <ProgressBar
                android:id="@+id/pressurePgb"
                android:layout_width="100dp"
                android:layout_height="10dp"
                android:max="1100"
                android:min="900"
                android:progress="1001"
                style="@style/Custom.Progressbar.Horizontal" />

            <TextView
                android:id="@+id/pressureText"
                android:gravity="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1001mPa"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>